website/src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,400;0,500;0,600;0,700&display=swap');
@import "tailwindcss";
@plugin "@tailwindcss/typography";


h1, .prose h1 {
    font-size: 3rem;
    font-weight: 600;
    font-family: 'Albert Sans', ui-sans-serif, system-ui, sans-serif;
}

h2, h3, h4, h5, h6,
.prose h2, .prose h3, .prose h4, .prose h5, .prose h6 {
    font-weight: 500;
    font-family: 'Albert Sans', ui-sans-serif, system-ui, sans-serif;
}

p {
    font-size: 1.125rem;
}

:root {
    color: #121113;
    background-color: #f4f4f4;
}

a {
    color: #217c3a;
    font-weight: 500;
    font-family: 'Albert Sans', ui-sans-serif, system-ui, sans-serif;
    transition: transform 0.1s ease-in-out;
}

a:hover {
    text-decoration: underline;
    transform: translateY(-2px);
    /*transform-origin: 50% 100%;*/
}

.hero-background {
    position: relative;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-image: url('/trees2.jpeg');
    background-repeat: no-repeat;
    background-size: cover;
    -webkit-mask-image: linear-gradient(to right, black 10%, transparent 100%);
    /*mask-image: linear-gradient(to left, black 50%, transparent 100%);*/

    background-blend-mode: screen;
}

@media (max-width: 1360px) {
    .hero-background {
    background-position-x: right -50px;
    }
}

.developers-background {
    position: relative;
    min-height: 100vh;
    overflow: hidden;
    -webkit-mask-image: linear-gradient(to left, black 10%, transparent 100%);
    mask-image: linear-gradient(to left, black 10%, transparent 100%);
}

